docs: todo_07_06.md 완료 목록 업데이트
- 라이브러리 취약점 점검.md 정리 파일 추가
- docs > 0706 디렉토리 이름을 0706_멘토링_정리 로 변경

--- a/docs/todo/0706_멘토링_정리/todo_07_06.md
+++ b/docs/todo/0706_멘토링_정리/todo_07_06.md
@@ -17,19 +17,10 @@
 ### 테스트 및 품질 도구
 - [x] Jacoco 설정 및 커버리지 기준 검증 (`LINE ≥ 80%`, `BRANCH ≥ 70%`)
 - [ ] Detekt or Ktlint 설정
-- [ ] Dependency Check (OWASP or `snyk` 대체 가능)
-- [ ] Codecov or SonarQube 연동
-- [ ] GitHub Actions CI 구성
+- [x] Dependency Check (OWASP or `snyk` 대체 가능)
+- [ ] SonarQube 연동
+  - [ ] repository 권한 문제인지 담당자 문의 필요 ... 
+- [x] GitHub Actions CI 구성
+- [x] 라이브러리 취약점 점검
 
 ---
-
-## 프로젝트 멀티모듈 구성
-
-```bash
-FDS-System/
-├── api/           # REST API, Kafka producer
-├── domain/        # Entity, JPA, Rule DSL
-├── detector/      # 이상 거래 탐지 엔진
-├── common/        # 공통 유틸, 모델, 상수
-├── external/      # Kafka, Redis, 외부 연동
-└── batch/         # 배치 처리 및 통계
