feat: multimodule 구성 ( 송금에 필요한 로직을 구현하기 위함 )

--- a/docs/todo/0720_멘토릴_정리/todo_07_20.md
+++ b/docs/todo/0720_멘토릴_정리/todo_07_20.md
@@ -10,9 +10,9 @@
 ---
 
 ## 그외 고민
-- [ ] Data 를 어떻게 replecation 할 것 인지 고민 필요.
+- [ ] Data 를 어떻게 replication 할 것 인지 고민 필요.
 - [ ] 결제 서비스 <-> FDS 서비스 간의 데이터 sync 가 어떻게 될 것 인지 고민 필요.
-- [ ] 파티션의 토픽을 어떻게 관리 할 것이며, 순서의 보장이 필요한 상황인 것 인지 ?
+- [ ] 파티션 의 토픽을 어떻게 관리 할 것이며, 순서의 보장이 필요한 상황인 것 인지 ?
 ---
 
 ## 송금 서비스 개발 TODO
