feat: transfer domain 모델 작성 및, model valueObject 작성 - testCode 작성 - erd Update

--- a/docs/domain/송금/도메인모델.md
+++ b/docs/domain/송금/도메인모델.md
@@ -1,84 +1,232 @@
-# 송금 도메인 모델 정의서 (v2)
+# 송금 도메인 모델
 
-## 1. 도메인 설명
+## 도메인 모델 만들기 순서
 
-송금(Transfer)은 시스템 내 사용자가 다른 사용자에게 금액을 전송하는 하나의 트랜잭션이다.  
-송금은 요청-처리-완료/실패-이력기록의 전체 흐름을 포함한다.
+1. 듣고 배우기
+2. '중요한 것'들 찾기 (개념 식별)
+3. '연결 고리' 찾기 (관계 정의)
+4. '것'들을 설명하기 (속성 및 기본 행위 명시)
+5. 그려보기 (시각화)
+6. 이야기 하고 다듬기 (반복)
 
-> 이후에는 정정(보정)이나 리스크 평가로 확장될 수 있다.
+---
 
-송금은 단순한 상태 전이 뿐 아니라 다음을 포함한다:
+## 도메인 설명
 
-- 금액 이동 (잔액 차감/증가)
-- 정정 기록 (correction_log)
-- 상태 변경 이력 (tx_history)
-- 관리자의 보정 개입 가능성
-- 향후 이상거래 분석 대상 (risk_logs 연계)
-- 장애/오류 상황 기록 가능성 (dlq_events)
+송금(Transfer)은 시스템 내 한 사용자가 다른 사용자에게 자신의 자산을 전송하는 **가치 이동 행위**를 의미한다.  
+이 행위는 단순한 금액 이동이 아니라, **요청 -> 처리 -> 결과 판정 -> 이력 기록**이라는 상태 흐름을 갖는다.
 
-## 2. Transfer 애그리거트 (Aggregate Root)
+송금은 다음과 같은 흐름을 따른다.
 
-### 개념
+1. 사용자는 상대방의 정보를 입력하고 금액을 설정하여 송금을 요청한다.
+2. 시스템은 사용자의 잔액을 확인하고 송금 가능 여부를 검증한다.
+3. 검증이 완료되면 실제 자산 이동이 이루어진다. (잔액 차감 및 수취)
+4. 그 결과는 성공 또는 실패로 처리되며, 모든 상태 변경은 이력으로 기록된다.
 
-송금은 하나의 Aggregate로 모델링되며, 다음의 규칙을 가진다:
+송금은 외부 금융기관을 통하지 않고, **내부 사용자 간 자산 이동**을 모델링한다.  
+이는 포인트 시스템, 간편송금 서비스, 가상화폐 플랫폼 등 다양한 시스템에서 공통적으로 나타나는 모델이다.  
+현재는 내부 처리만을 다루며, **향후 온체인 송금(phase-3)** 또는 **이상거래 탐지(phase-2)** 와의 연계가 가능하도록 확장성을 고려하여 설계된다.
 
-- 출금자와 입금자는 같을 수 없다
-- 금액은 0보다 커야 한다
-- 상태 전이만으로 성공/실패가 구분된다
-- 상태 변경은 반드시 기록(tx_history)된다
-- 정정은 1회에 한해 보정 가능하며, 관리자 권한이 필요하다
+송금은 다음과 같은 특성을 갖는다:
 
-### 속성
+- 한 방향성의 트랜잭션이다. (A -> B)
+- 금액은 0보다 큰 유효한 값이어야 한다.
+- 성공 여부에 따라 상태가 명확하게 관리되어야 한다. (`PENDING -> COMPLETED / FAILED`)
+- 정정 처리(`CORRECTED`)를 통해 관리자의 개입을 허용한다.
 
-| 필드 | 타입 | 설명 |
-|------|------|------|
-| `id` | TransferId (Long (Snowflake)) | 송금 고유 식별자 |
-| `fromMemberId` | Long (Snowflake) | 보내는 사용자 ID |
-| `toMemberId` | Long (Snowflake) | 받는 사용자 ID |
-| `amount` | Money (bigint) | 송금 금액 |
-| `status` | TransferStatus | 현재 상태 |
-| `requestedAt` | datetime | 송금 요청 시각 |
-| `completedAt` | datetime? | 송금 처리 시각 |
-| `corrected` | Boolean | 정정 여부 플래그 (default: false) |
+---
 
-### 상태 (TransferStatus)
+## 도메인 모델
 
-- `PENDING`: 송금 요청됨 (처리 전)
-- `COMPLETED`: 성공적으로 완료됨
-- `FAILED`: 실패
-- `CORRECTED`: 관리자가 금액 정정을 수행함
+### [송금 애그리거트]
 
-### 행위 (도메인 메서드)
+### Transaction
 
-| 메서드 | 설명 |
-|--------|------|
-| `Transfer.create(...)` | 요청값을 기반으로 송금 객체 생성 (기본 검증 포함) |
-| `complete()` | 송금을 성공 상태로 전이 |
-| `fail()` | 송금을 실패 상태로 전이 |
-| `correct(amount, adminId, reason)` | 정정 수행, correction_log 생성 트리거 |
-| `recordStatusChange(prev, next, adminId?)` | 상태 변경 이력 저장 |
+_Aggregate Root_
 
-## 3. 이벤트 연동 고려 (도메인 외부 흐름과 연결)
+> 도메인 규칙을 포함한 순수한 도메인 모델이다.  
+> 영속성과 무관하며, 상태 전이와 유효성 검증 책임을 가진다.
 
-| 이벤트 | 목적 | 연계 테이블 |
-|--------|------|--------------|
-| `TransferCreatedEvent` | 송금 요청됨 → 분석 / 큐잉 | risk_logs |
-| `TransferCompletedEvent` | 성공 처리됨 → 계좌 입금 | account_balances |
-| `TransferFailedEvent` | 실패 처리됨 → DLQ 기록 | dlq_events |
-| `TransferCorrectedEvent` | 정정 발생 → correction_log | correction_log |
+#### 속성
 
-## 4. 보완 포인트 반영 정리
+- `id`: `Long` (Snowflake ID)
+- `senderUserId`: `Long`
+- `receiverUserId`: `Long`
+- `amount`: `Money`
+- `status`: `TransactionStatus`
+- `exchangeRateId`: `Long?` (phase-3 연계)
+- `receivedAt`: `LocalDateTime?`
+- `createdAt`: `LocalDateTime`
 
-| 항목 | 반영 여부 | 설명 |
-|------|-----------|------|
-| 정정 처리 | `corrected`, `correct()` |
-| 상태 변경 이력 | `tx_history` 연계 |
-| 관리자 개입 | 정정 및 상태 변경 시 adminId 보관 |
-| 실패 기록 | `TransferFailedEvent` → DLQ 가능 |
-| 분석 연동 | `TransferCreatedEvent` → risk_logs 대상됨
+#### 행위
 
-## 5. 설계 요약
+`static request(senderId, receiverId, amount)`: 송금 요청을 생성한다.   
+상태는 항상 PENDING으로 시작하며, senderUserId, receiverUserId, amount를 입력값으로 갖는다.   
+유효성 검증(금액 양수 여부 등)은 이 시점에 수행된다.
 
-- Transfer는 단순한 데이터가 아닌 상태 주도 모델
-- 상태 전이/정정/이력/연동이 명확히 존재
-- 도메인 모델로 캡슐화할 가치가 충분한 Aggregate
+`complete()`: 송금 처리를 완료한다.   
+상태는 COMPLETED로 변경되며, 수취 시점을 receivedAt에 기록한다.  
+상태 전이 전 PENDING 상태여야 한다. 성공 이벤트 트리거와 이력 기록이 함께 동반될 수 있다.
+
+`fail()`: 송금 처리가 실패했음을 표시한다.  
+상태는 FAILED로 전이되며, 실패 사유는 외부에서 관리된다.   
+PENDING 상태일 때만 호출 가능하다.
+
+`correct()`: 이미 처리된 송금을 정정한다.
+상태는 CORRECTED로 변경되며, 새로운 Transaction이 별도로 생성되어야 한다.   
+COMPLETED 또는 FAILED 상태에서만 정정이 가능하다.
+
+`isPending()`: 현재 송금 상태가 PENDING인지 여부를 반환한다.   
+상태 전이 가능성 판단에 사용된다.
+
+`isCompleted()`: 송금이 COMPLETED 상태인지 여부를 반환한다.   
+정정 가능 여부 판단 등에 사용된다.
+
+`isFailed()`: 송금이 FAILED 상태인지 여부를 반환한다.   
+마찬가지로 정정 가능성 판별, 리포트 필터링 등에 활용된다.
+
+---
+
+### TransactionStatus
+
+_Enum_
+
+#### 상수
+
+- `PENDING`: 송금이 요청됨
+- `COMPLETED`: 송금이 성공적으로 완료됨
+- `FAILED`: 송금 처리 중 실패함
+- `CORRECTED`: 송금이 정정되어 무효화됨
+
+---
+
+### TransactionEntity
+
+_Persistence Model_
+
+> `Transaction` 애그리거트를 RDB에 저장하기 위한 JPA 기반 매핑 모델.  
+> `infra/rdb/entity`에 위치하며, `Transaction` ↔ `TransactionEntity` 간 변환 메서드 제공됨.
+
+---
+
+### AccountBalance
+
+_Entity (도메인 모델)_
+
+> 사용자 계좌의 상태를 나타내는 **도메인 모델**이다.  
+> 상태가 변경될 수 있으므로 Entity이며, `userId`로 식별된다.
+
+#### 속성
+
+- `userId: Long`
+- `balance: Money`
+
+#### 행위
+
+- `deposit(amount: Money)`
+- `withdraw(amount: Money)`
+- `current(): Money`
+
+---
+
+### AccountBalanceEntity
+
+_Persistence Model_
+
+> `AccountBalance` 도메인을 저장하기 위한 JPA 모델.  
+> Redis 또는 RDB에 따라 구현체가 달라질 수 있다.
+
+---
+
+### Money
+
+_Value Object_
+
+> SCALE=8 고정 소수점 기반 `Long` 값으로 구성된 금액 표현 객체.  
+> 모든 연산은 불변 객체로 반환되며, 음수 금액은 허용되지 않는다.
+
+#### 속성
+
+- `rawValue: Long
+
+#### 행위
+
+- `add(Money): Money`
+- `subtractOrThrow(Money): Money`
+- `isZero(): Boolean`
+- `isPositive(): Boolean`
+
+---
+
+### TransactionStatus
+
+_Enum_
+
+- `PENDING`
+- `COMPLETED`
+- `FAILED`
+- `CORRECTED`
+
+---
+
+### TxHistory
+
+_Persistence Model_
+
+> 상태 전이를 기록하는 영속성 객체이다.
+
+#### 속성
+
+- `id`: `Long`
+- `txId`: `Long`
+- `prevStatus`: `TransactionStatus`
+- `nextStatus`: `TransactionStatus`
+- `changedBy`: `Long` (유저 Or 관리자 ID)
+- `createdAt`: `LocalDateTime`
+
+#### 행위
+
+- `static record(tx, prev, next, by): TxHistory`
+
+> 상태 기록
+
+---
+
+### CorrectionLog
+
+_Persistence Model_
+
+> 정정 처리를 기록하기 위한 영속성 객체이다.
+
+#### 속성
+
+- `id`
+- `txId`
+- `newTxId`
+- `restoredBy`
+- `reason`
+- `restoredAt`
+
+#### 행위
+
+- `static create(txId, newTxId, reason, restoredBy): CorrectionLog`
+
+> create(...): 정정 로그 생성
+---
+
+## 도메인 규칙
+
+- `Transaction`은 `PENDING` 상태에서만 `COMPLETED` 또는 `FAILED`로 전이 가능
+- `COMPLETED` 또는 `FAILED` 상태만 `CORRECTED` 가능
+- `CORRECTED`는 새로운 `Transaction` 생성과 연결됨
+- 금액은 0보다 커야 하며, 잔액은 `amount` 이상이어야 함
+- 잔액 증감은 Redis Lua 스크립트로 원자적으로 처리
+- 상태 전이는 반드시 `TxHistory`에 기록됨
+
+---
+
+## 예외
+
+- `InsufficientBalanceException`: 잔액 부족
+- `InvalidStateTransitionException`: 잘못된 상태 전이
+- `DuplicateCorrectionException`: 이미 정정된 송금
