--- a/docs/todo/0727_멘토링_정리/todo_07_29.md
+++ b/docs/todo/0727_멘토링_정리/todo_07_29.md
@@ -2,13 +2,15 @@
 
 ## API 레이어 설계 보완
 
-- [ ] Validation 적용
+- [x] Validation 적용
   - `@Valid`, `@NotNull`, `@Size` 등 명시적 제약조건 설정
+- [x] HTTP Method 적절성 재검토
+  - POST -> PUT 전환 여부 (멱등성 고려) = 송금은 요청마다 새로 처리되어야 하기 때문에 post 가 적절하다.
+
+## API Spec 문서화
 - [ ] 문서화 도구 명시
   - Swagger, Spring REST Docs 중 선택
   - 최소한 주석 기반 설명 포함
-- [ ] HTTP Method 적절성 재검토
-  - POST → PUT 전환 여부 (멱등성 고려)
 - [ ] HTTP Status Code 정비
   - 200, 201, 202 등 의미 정의 및 적용 구분
 
@@ -35,17 +37,17 @@ e.g ) :
 
 ## 도메인 로직 구조화
 
-- [ ] UseCase / Service / Command 간 역할 정리
+- [x] UseCase / Service / Command 간 역할 정리
 - [ ] Enum 비교 방식 정리
   - `==` vs `equals()` 용도 구분
 - [ ] Enum의 불변성, JVM 상 위치, GC 대상 여부 학습
 
 ## 아키텍처 구조 정비
 
-- [ ] Adapter 명명 방식 정비
+- [x] Adapter 명명 방식 정비
   - 헥사고날 관점에서 inbound / outbound 명확히 구분
-- [ ] 패키지 구조 재검토 및 정리
-- [ ] infra 모듈 의존성 정리
+- [x] 패키지 구조 재검토 및 정리
+- [x] infra 모듈 의존성 정리
   - infra-rdb, infra-event 등 사용 목적 명확화
 
 ## 기술 개념 정리 (JVM, JPA 등)
@@ -57,7 +59,7 @@ e.g ) :
 
 ## 일정 계획 및 PR 관리
 
-- [ ] 금요일까지 1차 PR 제출
+- [x] 금요일까지 1차 PR 제출
 - [ ] 다음 주까지 컨트롤러 로직 정비 및 리뷰 대응
 - [ ] 기능 단위 기준으로 1~2주 단위 공수 계획 수립
   - 일정 기반으로 진행/보완 판단 가능하도록 정리
