--- a/docs/domain/송금/도메인모델.md
+++ b/docs/domain/송금/도메인모델.md
@@ -50,8 +50,8 @@ _Aggregate Root_
 #### 속성
 
 - `id`: `Long` (Snowflake ID)
-- `senderSnowFlakeId`: `Long`
-- `receiverSnowFlakeId`: `Long`
+- `senderId`: `Long`
+- `receiverId`: `Long`
 - `amount`: `Money`
 - `status`: `TransactionStatus`
 - `exchangeRateId`: `Long?` (phase-3 연계)
@@ -61,7 +61,7 @@ _Aggregate Root_
 #### 행위
 
 `static request(senderId, receiverId, amount)`: 송금 요청을 생성한다.   
-상태는 항상 PENDING으로 시작하며, senderSnowFlakeId, receiverSnowFlakeId, amount를 입력값으로 갖는다.   
+상태는 항상 PENDING으로 시작하며, senderId, receiverId, amount를 입력값으로 갖는다.   
 유효성 검증(금액 양수 여부 등)은 이 시점에 수행된다.
 
 `complete()`: 송금 처리를 완료한다.   
