docs: refactor - 카프카 공부 문서의 image 파일 이동

--- a/docs/etc/kafka_study/03.클러스터 환경에서의 장애상황 그리고 무중단.md
+++ b/docs/etc/kafka_study/03.클러스터 환경에서의 장애상황 그리고 무중단.md
@@ -1,7 +1,7 @@
 # 카프카의 장애 극복 시스템
 
 ## 브로커
-![브로크리](img/broker_img.png)
+![브로크리](../image/broker_img.png)
 
 브로커는 단순히 메세지를 저장하는 서버의 역할도 수행하지만.  
 클러스터의 수많은 브로커중 **단 하나의 브로커** 는 특별한 기능을 담당하게 된다.  
@@ -11,7 +11,7 @@
 ## 컨트롤러 브로커
 컨트롤러 브로커는 총 사령관 과 같은 역할을 수행한다.  
 
-![img_2.png](img/broker_img2.png)
+![img_2.png](../image/broker_img2.png)
 주키퍼가 엄마 라면, 브로커는 아빠 같은 느낌이랜다. 
 
 왜냐면, 클러스터 라는 환경은 모든 상태에 대해서 변경을 관리하고 결정하는 책임을 가지고 있기 때문이다.
@@ -54,7 +54,7 @@
 이제 브로커 하나가 다운 되었을때 어떤일이 벌어지는지 확인해보자. 
 
 ## 브로커 하나가 다운되었을때
-![모식도](img/broker_img_1.png)
+![모식도](../image/broker_img_1.png)
 
 1 ) 장애 상황 ( 네트워크 문제 / 하드웨어 고장 등)  
 2 ) 장애 탐지 ( 주기적으로 난 살아있다 라고 헬스체크를 주키퍼에 보낸다  )  
